# spidey

./: .gitignore  README.md  dev.py  file.py  html  main.py  page_data.py  pyproject.toml  requirements.txt  setup.py  spidey.py  test.py  webpage.py  writer.py
data/2024-11-22/nodejs/: 1732258543_d5bab1b6c7b90282fc26.json  1732258592_ff74145ab2891fc9ad3b.json  1732258837_885bab18b5eb6893ed66.json
spidey/: __init__.py  config.py  controller.py  exceptions.py  fetcher.py  file.py  file_queue.py  filemanager.py  parser.py  queue.py  robots.py  spidey.py  storage.py  test.py  webpage.py
